# telephony_telephony_data

./: .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  build-profile.json5  bundle.json  data_storage_aafwk.gni  data_storage_ability_runtime.gni  hvigorfile.ts  oh-package.json5  ohos.build  publicity.xml
AppScope/: app.json  app.json5
common/include/: data_storage_errors.h  data_storage_log_wrapper.h  parser_util.h  permission_util.h  preferences_util.h  rdb_base_helper.h  rdb_sms_mms_dfx_adapter.h  telephony_datashare_stub_impl.h  time_util.h
common/src/: parser_util.cpp  permission_util.cpp  preferences_util.cpp  rdb_base_callback.cpp  rdb_base_helper.cpp  rdb_sms_mms_dfx_adapter.cpp  telephony_datashare_stub_impl.cpp
config/: config.json
entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
entry/src/main/: module.json  module.json5
entry/src/main/ets/Application/: TelephonyDataAbilityStage.ets  TelephonyDataAbilityStage.ts
entry/src/main/ets/DataShareExtAbility/: DataShareExtAbility.ts
entry/src/main/ets/ServiceAbility/: BackupRestoreServiceAbility.ets
entry/src/main/ets/ServiceAbility/stub/: BackupRestoreServiceStub.ets
entry/src/main/ets/WorkScheduler/: BackupRestoreWorkScheduleCont.ets  BackupRestoreWorkScheduler.ets
entry/src/main/ets/backup/: BackupCommonEvent.ets  BackupConstants.ets  BackupExtension.ets
entry/src/main/ets/backup/copyData/: BackupCountInfo.ets  BackupRestoreProcess.ets  BackupRestoreResult.ets  DbConstants.ets  DbHelper.ets  LooseObject.ts  NewDbHelper.ets  NextDbHelper.ets  NextOldDBData.ets  OldDBData.ets  RestoreTaskPoolUtil.ets
entry/src/main/ets/backup/copyData/bean/: MmsPartItem.ets  MmsPduItem.ets  MmsProtocolItem.ets  RcsInfoItem.ets  SessionItem.ets  SessionMapItem.ets  SmsMmsInfoItem.ets  SmsSubsectionItem.ets  UpdateSessionItem.ets
entry/src/main/ets/backup/copyData/contract/: BaseColumns.ets  MmsPart.ets  MmsPdu.ets  MmsProtocol.ets  RcsInfo.ets  Session.ets  SmsMmsInfo.ets  SmsSubsection.ets
entry/src/main/ets/backup/database/: DbConstants.ets  DbHelper.ets  NewDbHelper.ets  OldDBData.ets
entry/src/main/ets/backup/model/: IModel.ets
entry/src/main/ets/backup/model/bean/: FavorateInfoItem.ets  MmsPartItem.ets  RcsInfoItem.ets  SessionItem.ets  SmsMmsInfoItem.ets
entry/src/main/ets/backup/model/mms/: MmsModel.ets
entry/src/main/ets/backup/presenter/: IPresenter.ets
entry/src/main/ets/backup/presenter/mms/: MmsPresenter.ets
entry/src/main/ets/backup/rollback/: RollbackDbConstants.ets  RollbackNextDbHelper.ets  RollbackOhosDbHelper.ets  RollbackResult.ets  RollbackTaskPoolUtil.ets
entry/src/main/ets/common/utils/: DataBaseUtil.ets  DotUtils.ets  ErrorUtils.ets  FileUtils.ets  GskvPreferencesUtils.ets  LogUtils.ets  LogUtils.ts  RdbStoreUtils.ets  SharedPreferencesUtils.ets  StringUtil.ets  TelephoneUtil.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: backup_config.json  main_pages.json  proxy_data_share_config.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
entry/src/ohosTest/ets/test/: Ability.test.ets  BackupExtension.test.ets  DbHelper.test.ets  List.test.ets  NextDbHelper.ets
entry/src/ohosTest/ets/testability/: TestAbility.ets
entry/src/ohosTest/ets/testability/pages/: Index.ets
etc/: BUILD.gn  OpkeyInfo.json  ecc_data.json  number_match.json  pdp_profile.json
global_ecc/include/: global_ecc_ability.h  rdb_global_ecc_callback.h  rdb_global_ecc_helper.h
global_ecc/src/: global_ecc_ability.cpp  rdb_global_ecc_callback.cpp  rdb_global_ecc_helper.cpp
global_params/include/: global_params_ability.h  rdb_global_params_callback.h  rdb_global_params_helper.h
global_params/src/: global_params_ability.cpp  rdb_global_params_callback.cpp  rdb_global_params_helper.cpp
interfaces/innerkits/include/: global_ecc_data.h  global_params_data.h  opkey_data.h  pdp_profile_data.h  sim_data.h  sms_mms_data.h
opkey/include/: opkey_ability.h  opkey_data.h  rdb_opkey_callback.h  rdb_opkey_helper.h
opkey/src/: opkey_ability.cpp  rdb_opkey_callback.cpp  rdb_opkey_helper.cpp
opkey_version/include/: opkey_version_ability.h  opkey_version_result_set_bridge.h
opkey_version/src/: opkey_version_ability.cpp  opkey_version_result_set_bridge.cpp
pdp_profile/include/: apn_encryption_util.h  pdp_profile_ability.h  pdp_profile_data.h  pdp_result_set_bridge.h  rdb_pdp_profile_callback.h  rdb_pdp_profile_helper.h
pdp_profile/src/: apn_encryption_util.cpp  pdp_profile_ability.cpp  pdp_result_set_bridge.cpp  rdb_pdp_profile_callback.cpp  rdb_pdp_profile_helper.cpp
signature/: datastorage.p7b  datastorage1.p7b  pm.gni
sim/include/: rdb_sim_callback.h  rdb_sim_helper.h  sim_ability.h  sim_data.h
sim/src/: rdb_sim_callback.cpp  rdb_sim_helper.cpp  sim_ability.cpp
sms_mms/include/: hi_audit.h  rdb_sms_mms_base_helper.h  rdb_sms_mms_callback.h  rdb_sms_mms_helper.h  rdb_sms_mms_util.h  sms_mms_ability.h  sms_mms_data.h  sms_mms_observer.h  sms_mms_tables.h  zip_util.h
sms_mms/src/: hi_audit.cpp  rdb_sms_mms_base_helper.cpp  rdb_sms_mms_callback.cpp  rdb_sms_mms_helper.cpp  rdb_sms_mms_util.cpp  sms_mms_ability.cpp  sms_mms_observer.cpp  sms_mms_tables.cpp  zip_util.cpp
test/: BUILD.gn
test/fuzztest/telephonedata_fuzzer/: BUILD.gn  telephonedata_fuzzer.cpp  telephonedata_fuzzer.h
test/unittest/data_gtest/: BUILD.gn  data_storage_gtest.cpp  data_storage_gtest.h  sms_mms_tables_gtest.cpp  sms_mms_tables_gtest.h
test/unittest/data_test/: BUILD.gn  data_storage_test.cpp
