# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/data_storage/data_storage_ability_runtime.gni")
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/data_storage"

ohos_hap("Telephony_Data_Storage") {
  hap_profile = "./config/config.json"
  shared_libraries = [ ":tel_data_storage" ]
  certificate_profile = "./signature/datastorage.p7b"
  hap_name = "Telephony_Data_Storage"
  module_install_dir = "app/com.ohos.telephonydataability"
  part_name = "data_storage"
  subsystem_name = "telephony"
}

ohos_shared_library("tel_data_storage") {
  sources = [
    "$SOURCE_DIR/common/src/data_storage_log_wrapper.cpp",
    "$SOURCE_DIR/common/src/parser_util.cpp",
    "$SOURCE_DIR/common/src/preferences_util.cpp",
    "$SOURCE_DIR/common/src/rdb_base_callback.cpp",
    "$SOURCE_DIR/common/src/rdb_base_helper.cpp",
    "$SOURCE_DIR/opkey/src/opkey_ability.cpp",
    "$SOURCE_DIR/opkey/src/rdb_opkey_callback.cpp",
    "$SOURCE_DIR/opkey/src/rdb_opkey_helper.cpp",
    "$SOURCE_DIR/pdp_profile/src/pdp_profile_ability.cpp",
    "$SOURCE_DIR/pdp_profile/src/rdb_pdp_profile_callback.cpp",
    "$SOURCE_DIR/pdp_profile/src/rdb_pdp_profile_helper.cpp",
    "$SOURCE_DIR/sim/src/rdb_sim_callback.cpp",
    "$SOURCE_DIR/sim/src/rdb_sim_helper.cpp",
    "$SOURCE_DIR/sim/src/sim_ability.cpp",
    "$SOURCE_DIR/sms_mms/src/rdb_sms_mms_callback.cpp",
    "$SOURCE_DIR/sms_mms/src/rdb_sms_mms_helper.cpp",
    "$SOURCE_DIR/sms_mms/src/sms_mms_ability.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/sim/include",
    "$SOURCE_DIR/sms_mms/include",
    "$SOURCE_DIR/pdp_profile/include",
    "$SOURCE_DIR/opkey/include",
    "$SOURCE_DIR/common/include",
  ]

  deps = [
    "${ability_runtime_inner_api_path}/ability_manager:ability_manager",
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "core_service:libtel_common",
    "hiviewdfx_hilog_native:libhilog",
    "preferences:native_preferences",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"DataStorage\"",
    "LOG_DOMAIN = 0xD001F05",
  ]
  part_name = "data_storage"
  subsystem_name = "telephony"
}
