# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

## Install pdp_profile.json to /system/etc/telephony/pdp_profile.json
ohos_prebuilt_etc("pdp_profile_default") {
  source = "pdp_profile.json"
  relative_install_dir = "./telephony"
  part_name = "telephony_data"
  subsystem_name = "telephony"
}

ohos_prebuilt_etc("ecc_data_default") {
  source = "ecc_data.json"
  relative_install_dir = "./telephony"
  part_name = "telephony_data"
  subsystem_name = "telephony"
}

ohos_prebuilt_etc("num_match_default") {
  source = "number_match.json"
  relative_install_dir = "./telephony"
  part_name = "telephony_data"
  subsystem_name = "telephony"
}

ohos_prebuilt_etc("opkey_info_default") {
  source = "OpkeyInfo.json"
  relative_install_dir = "./telephony"
  part_name = "telephony_data"
  subsystem_name = "telephony"
}

group("pdp_profile") {
  if (!(defined(global_parts_info) &&
        defined(global_parts_info.telephony_telephony_enhanced) &&
        global_parts_info.telephony_telephony_enhanced)) {
    deps = [ ":pdp_profile_default" ]
  }
}

group("global_params_config") {
  deps = [
    ":ecc_data_default",
    ":num_match_default",
  ]
}
