# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_fuzztest("TelephoneDataFuzzTest") {
  fuzz_config_file = "../telephonedata_fuzzer"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "../../../interfaces/innerkits/include",
    "../../../common/include",
    "../../../opkey/include",
    "../../../opkey_version/include",
    "../../../pdp_profile/include",
    "../../../sim/include",
    "../../../global_params/include",
    "../../../sms_mms/include",   
  ]

  sources = [
    "telephonedata_fuzzer.cpp"
  ]

  deps = [
    "../../../../telephony_data:tel_telephony_data"
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"DataStorage\"",
    "LOG_DOMAIN = 0xD001F05",
  ]

  external_deps = [    
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_provider",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "zlib:libz",
  ]

  module_out_path = "telephony/telephony_data"
  subsystem_name = "telephony"
  part_name = "telephony_data"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TelephoneDataFuzzTest",
  ]
}
###############################################################################