# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SOURCE_DIR = "../../../"

ohos_unittest("tel_telephony_data_gtest") {
  part_name = "telephony_data"
  subsystem_name = "telephony"
  test_module = "tel_telephony_data_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [ "$SOURCE_DIR/test/unittest/data_gtest/data_storage_gtest.cpp" ]

  include_dirs = [
    "$SOURCE_DIR/common/include",
    "$SOURCE_DIR/interfaces/innerkits/include",
    "$SOURCE_DIR/opkey/include",
    "$SOURCE_DIR/pdp_profile/include",
    "$SOURCE_DIR/sim/include",
    "$SOURCE_DIR/sms_mms/include",
    "$SOURCE_DIR/global_params/include",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"TelephonyDataGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_provider",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-flto",
    "-fsanitize=cfi",
    "-fsanitize-cfi-cross-dso",
    "-fvisibility=hidden",
  ]

  ldflags = [
    "-flto",
    "-fsanitize=cfi",
    "-fsanitize-cfi-cross-dso",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":tel_telephony_data_gtest" ]
}
